tests/fixtures/valid/newtype.incn
type UserId = newtype int
type Email = newtype str


def get_user_id(id: UserId) -> int:
    return 42


model User:
    id: UserId
    email: Email
