tests/fixtures/invalid/type_mismatch.incn
def foo() -> int:
    return "not an int"
